Fix overflow handling in sidebar navigation

--- a/_assets/styles.css
+++ b/_assets/styles.css
@@ -26,6 +26,7 @@
   left: 0;
   bottom: 0;
   z-index: 15;
+  overflow-y: scroll;
   width: 17.5rem;
   font-size: 0.9rem;
   border-right: #ddd solid 1px;
